added bean validation annotation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.password=java@123
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
-server.port=8082
+server.port=8083
+logging.level.org.springframework.web=DEBUG
+
 
 
